# metalfpga

./: .env  .gitignore  .gitmodules  4STATE.md  CMakeLists.txt  FLEXGOAL.md  LICENSE.COMMERCIAL  README.md  metalfpga.1  resistor_power.vcd  test_all.sh  test_all_smart.sh  test_clock_big_vcd.vcd  test_runner.sh
.github/: copilot-instructions.md
.github/workflows/: macos-cmake-build.yml
deprecated/: test_runner.sh
deprecated/verilog/: test_clock_gen.v  test_v1_ready_do_not_move.v  test_vcd_counter_basic.v  test_vcd_edge_detection.v  test_vcd_hierarchy_deep.v  test_vcd_multi_signal.v  test_vcd_nba_ordering.v  test_vcd_timing_delays.v  test_vcd_wide_signals.v
docs/: ANALOG.md  APP_BUNDLING.md  ASYNC_DEBUGGING.md  CRLIBM_PORTING.md  CRLIBM_ULP_COMPARE.md  FOUR_STATE_TABLES.md  GPGA_KEYWORDS.md  GPGA_REAL_API.md  GPGA_SCHED_API.md  GPGA_WIDE_API.md  HOW_METALFPGA_WORKS.md  IEEE_1364_2005_FLATMAP_COMPARISON.md  IEEE_1364_2005_IMPLEMENTATION_DEFINED_BEHAVIORS.md  IEEE_1364_2005_VARY_DECISIONS.md  LOOSE_ENDS.md  METAL4_PIPELINE_HARVESTING.md  METAL4_ROADMAP.md  METAL4_RUNTIME_FLAGS.md  METAL4_SCHEDULER_EDGE_REFAC_PLAN.md  METAL4_SCHEDULER_VM_BYTECODE_BUG.md  METAL4_SCHEDULER_VM_COMPILE_TIME_PLAN.md  METAL4_SCHEDULER_VM_DOCUSPRINT.md  METAL4_SCHEDULER_VM_NEXT_OPCODES.md  METAL4_SCHEDULER_VM_PARALLELISM_PLAN.md  METAL4_SCHEDULER_VM_PLAN.md  METAL4_SCHEDULER_VM_RESUME.md  METAL4_SCHEDULER_VM_TABLEIFY_PLAN.md  METAL4_SCHEDULER_VM_TERNARY_PLAN.md  METAL4_SCHEDULER_VM_UNROLL_PLAN.md  MTL_COMPILER_SAMPLE_ISSUES.md  REALTIME_SIM_PLAN.md  SCHEDULER_VM_OPCODES.md  SOFTFLOAT64_IMPLEMENTATION.md  TIMING_CHECKS_IMPLEMENTATION.md  VERILOG_REFERENCE.md  VERILOG_TEST_OVERVIEW.md  bit_packing_strategy.md  gpga_4state_api.md  runtime_profile_baseline.md  runtime_profile_post_rev40.md
docs/diff/: REV0.md  REV1.md  REV10.md  REV11.md  REV12.md  REV13.md  REV14.md  REV15.md  REV16.md  REV17.md  REV18.md  REV19.md  REV2.md  REV20.md  REV21.md  REV22.md  REV23.md  REV24.md  REV25.md  REV26.md  REV27.md  REV28.md  REV29.md  REV3.md  REV30.md  REV31.md  REV32.md  REV33.md  REV34.md  REV35.md  REV36.md  REV37.md  REV38.md  REV39.md  REV4.md  REV40.md  REV41.md  REV42.md  REV43.md  REV44.md  (+8 more)
docs/future/: APP_BUNDLING.md  METAL_COMPILER_MULTI_CPU.md  MSL_TO_VERILOG_REVERSE_PARSER.md  SYSTEMVERILOG.md  TIME_TRAVEL_DEBUGGER.md  UVM.md  VCD_VIEWERS.md  VERILOG_TO_ARCHIVE_PIPELINE.md  VPI_DPI_UNIFIED_MEMORY.md
docs/gpga/: README.md  ir_invariants.md  roadmap.md  verilog_words.md
goldVDCs/: test_clock_big_4state.vcd
include/: gpga_4state.h  gpga_real.h  gpga_real_decl.h  gpga_sched.h  gpga_wide.h
scripts/: reemit_test_clock_big_vcd.sh  run_parallelism_matrix.sh  run_parallelism_verify.sh  run_runtime_profile.sh
src/: main.mm
src/codegen/: host_codegen.hh  host_codegen.mm  msl_codegen.cc  msl_codegen.hh
src/core/: README.md  elaboration.cc  elaboration.hh  scheduler_vm.hh
src/frontend/: ast.cc  ast.hh  verilog_parser.cc  verilog_parser.hh
src/msl/: gpga_real_lib.metal
src/runtime/: metal_runtime.hh  metal_runtime.mm
src/tools/: crlibm_compare.cc  metal_smoke.mm
src/utils/: diagnostics.cc  diagnostics.hh  msl_naming.hh
verilog/: array.v  case_statement.v  generate.v  recursive_module.v  test_array_bounds.v  test_assign_delay.v  test_attribute.v  test_blocking_vs_nba.v  test_case_default_multiple.v  test_case_x_z.v  test_casex_all_dontcare.v  test_casex_mixed_xz.v  test_casex_state_machine.v  test_casex_vs_casez_difference.v  test_casex_with_x_value.v  test_casez_basic.v  test_casez_decoder.v  test_casez_only_z_dontcare.v  test_casez_partial_dontcare.v  test_casez_priority.v  test_casez_with_z_value.v  test_clock_big_vcd.v  test_cmos_switches.v  test_combinational_race.v  test_concatenation_edge.v  test_conditional_generate.v  test_const_function.v  test_define.v  test_defparam.v  test_defparam_hierarchical.v  test_defparam_priority.v  test_defparam_scope_resolution.v  test_delay_assign.v  test_disable.v  test_display.v  test_divide_by_zero.v  test_edge_both.v  test_edge_sensitivity.v  test_event.v  test_event_wait_delta.v  (+123 more)
verilog/pass/: adder.v  definitions.vh  everything.v  file_io_words.txt  ghostinstancechain.v  (+261 more)
(+184 files in other folders)
